# choreonoid_ros_control_sample

./: CMakeLists.txt  README.md  package.xml
config/: simple_leg_control.yaml
launch/: bringup.launch  simple_leg_control.launch
model/: simple_leg.body
project/: simple_leg.cnoid
src/: CMakeLists.txt  sinewave_command.cpp
xacro/: simple_leg.xacro
