<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_ros_control_sample</name>
  <version>1.0.0</version>
  <description>
    Tutorial on how to use choreonoid_ros_control for your custom model
  </description>
  <maintainer email="f.thlover398@gmail.com">Hayabusa6863</maintainer>
  <license>MIT</license>
  <url type="website">https://qiita.com/FAL19/items/7b4a491e2399aa5cf7c9</url>
  <url type="repository">https://github.com/Hayabusa6863/choreonoid_ros_control_sample/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>choreonoid</exec_depend>
  <exec_depend>choreonoid_ros</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <export>
  </export>
</package>
